change summernote on froala editor

--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -54,17 +54,11 @@
 
                         <div class="row">
                             <div class="col-md-12">
-                                {% include 'cup/form.twig' with {
+                                {% include 'cup/editor.twig' with {
                                     'label': 'Описание категории',
-                                    'type': 'textarea',
                                     'name': 'description',
                                     'args': {
-                                        'method': 'null',
-                                        'value': item.description,
-                                        'data': {
-                                            'summernote': true,
-                                            'summernote-code': true,
-                                        }
+                                        'value': item.description
                                     }
                                 } %}
                             </div>
