--- a/public/assets/js/plugin/froala/froala_style.css
+++ b/public/assets/js/plugin/froala/froala_style.css
@@ -522,3 +522,7 @@ span.fr-img-caption.fr-view.fr-dii.fr-fir {
 .fr-toolbar button i, .fr-toolbar button span {
     color: rgb(73, 80, 87) !important;
 }
+.fr-popup [data-cmd="imageManager"],
+.fr-popup [data-cmd="insertEmoticon"] + p {
+    display: none !important;
+}
