add files to page and publication #2

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -28,6 +28,7 @@
     {{ scripts.append('/assets/js/plugin/jquery.modal/jquery.modal.min.js') }}
     {{ scripts.append('/assets/js/plugin/sweetalert/sweetalert.min.js') }}
     {{ scripts.append('/assets/js/plugin/select2/select2.full.min.js') }}
+    {{ scripts.append('/assets/js/plugin/dropzone/dropzone.min.js') }}
     {{ scripts.append('/assets/js/plugin/froala/froala_editor.pkgd.js') }}
     {{ scripts.append('/assets/js/plugin/froala/ru.js') }}
 
