add redirect code

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -65,7 +65,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="/" target="_blank">
-                                    <i class="fas fa-globe-europe"></i>
+                                    <i class="fas fa-globe"></i>
                                 </a>
                             </li>
 
