fix save params change login identifier type

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -230,7 +230,7 @@
                                     'type': 'select',
                                     'name': 'user[login_type]',
                                     'args': {
-                                        'option': {'email':'E-Mail', 'username':'Логин'}
+                                        'option': {'username':'Логин', 'email':'E-Mail'}
                                     }
                                 } %}
                             </div>
