--- a/src/Template/cup/docs/main/features.twig
+++ b/src/Template/cup/docs/main/features.twig
@@ -23,7 +23,7 @@
                     Минимальная нагрузка на базу данных
                 </li>
                 <li>
-                    Вывод новостей, статей
+                    Вывод публикаций, статей
                 </li>
                 <li>
                     Поддержка категорий
@@ -41,7 +41,9 @@
                     Возможность создания статистических страниц
                 </li>
                 <li>
-                    Возможность загрузки и прикрепления файлов к новостям
+                    Возможность загрузки и прикрепления файлов к публикациям, страницам, категориям товаров, товарам
+                </li>
+                <li>
                 </li>
             </ul>
 
@@ -67,7 +69,7 @@
             <b>Возможности центра упраления полетом (админпанели):</b>
             <ul>
                 <li>
-                    Добавление, редактирование и удаление новостей
+                    Добавление, редактирование и удаление публикаций
                 </li>
                 <li>
                     Добавление, редактирование и удаление статических страниц
