--- a/theme/default/publication.full.twig
+++ b/theme/default/publication.full.twig
@@ -44,7 +44,7 @@
                             <h2>{{ publication.title }}</h2>
                             <div>
                                 <ul class="meta">
-                                    <li>{{ publication.date|date(date_format) }}</li>
+                                    <li>{{ publication.date|df }}</li>
                                 </ul>
                             </div>
                             <div>
