--- a/theme/default/guestbook.twig
+++ b/theme/default/guestbook.twig
@@ -10,7 +10,7 @@
             </p>
             <div class="row" style="margin-top: 50px;">
                 <div class="col-md-12">
-                    <form method="post" class="contact-form">
+                    <form method="post" class="contact-form" data-grecaptcha>
                         <div class="row">
                             <div class="col-md-6">
                                 <input type="text" name="name" placeholder="Ваше имя *" required>
