--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -39,6 +39,8 @@
     <script src="/assets/js/public/libs/sweetalert2.all.min.js"></script>
     <script src="/assets/js/public/libs/simpleCart.min.js"></script>
     <script src="/assets/js/public/script.js"></script>
+
+    {% include 'recaptcha.twig' %}
 {% endblock %}
 
 {% block body %}
