убрал пустые разделы помощи

--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -23,18 +23,18 @@
                                     <i class="fas fa-book"></i>
                                     Общая информация
                                 </a>
-                                <a class="nav-link" id="v-pills-profile-tab-icons" data-toggle="pill" href="#docs-engine">
+                                {#<a class="nav-link" id="v-pills-profile-tab-icons" data-toggle="pill" href="#docs-engine">
                                     <i class="fas fa-book"></i>
                                     Работа с движком
-                                </a>
-                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-panel">
+                                </a>#}
+                                {#<a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-panel">
                                     <i class="fas fa-book"></i>
                                     Работа с админпанелью (ЦУП)
-                                </a>
-                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-template">
+                                </a>#}
+                                {#<a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-template">
                                     <i class="fas fa-book"></i>
                                     Шаблоны
-                                </a>
+                                </a>#}
                                 <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-developer">
                                     <i class="fas fa-book"></i>
                                     Разработчикам
