добавил возможность изменять адрес каталога
close #27

--- a/src/Template/cup/auth/login.twig
+++ b/src/Template/cup/auth/login.twig
@@ -1,7 +1,7 @@
 {% extends 'cup/layout.twig' %}
 
 {% block head %}
-    {% include 'recaptcha.twig' %}
+    {% include 'mixin/recaptcha.twig' %}
 {% endblock %}
 
 {% block body %}
