--- a/theme/default/common/banner.twig
+++ b/theme/default/common/banner.twig
@@ -5,7 +5,7 @@
             <div class="tag-new">NEW</div>
             <span>Новое поступление</span>
             <h2>ТОВАР</h2>
-            <a href="/catalog" class="site-btn">К покупкам</a>
+            <a href="/{{ parameter('catalog_address', 'catalog') }}" class="site-btn">К покупкам</a>
         </div>
     </div>
 </section>
