--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -33,7 +33,7 @@
             <!-- menu -->
             <ul class="main-menu">
                 <li><a href="/">Главная</a></li>
-                <li><a href="/catalog">Каталог <span class="new">New</span></a></li>
+                <li><a href="/{{ parameter('catalog_address', 'catalog') }}">Каталог <span class="new">New</span></a></li>
                 <li><a href="/blog">Блог</a></li>
                 <li><a href="/guestbook">Гостевая книга</a></li>
                 <li><a href="/delivery">Доставка</a></li>
