--- a/theme/default/products/last-list.twig
+++ b/theme/default/products/last-list.twig
@@ -13,7 +13,7 @@
             {% for product in products %}
                 <div class="product-item">
                     <div class="pi-pic">
-                        <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
+                        <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
                             <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" alt="">
                         </a>
                         <div class="pi-links">
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                     <div class="pi-text">
-                        <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
+                        <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
                             <h6>{{ product.price }}</h6>
                             <p>{{ product.title }}</p>
                         </a>
