--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -56,7 +56,7 @@
                                         <td style="display: none">{{ item.order }}</td>
                                         <td>{{ item.vendorcode }}</td>
                                         <td>
-                                            <a href="/catalog/{{ buf.address }}/{{ item.address }}" target="_blank">
+                                            <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ buf.address }}/{{ item.address }}" target="_blank">
                                                 {{ item.title }}
                                                 <i class="fas fa-external-link-alt"></i>
                                             </a>
