--- a/theme/default/catalog.category.menu.twig
+++ b/theme/default/catalog.category.menu.twig
@@ -1,6 +1,6 @@
 {% for node in categories.where('parent', '=', parent ?? '00000000-0000-0000-0000-000000000000').sortBy('order') %}
     <li class="">
-        <a href="/catalog/{{ node.address }}">{{ node.title }}</a>
+        <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ node.address }}">{{ node.title }}</a>
         {% set subNodes = categories.where('parent', '=', node.uuid).sortBy('order') %}
 
         {% if subNodes.count() %}
