--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -2,7 +2,7 @@
     <div class="product-item simpleCart_shelfItem">
         <div class="pi-pic">
             {#<div class="tag-sale">ON SALE</div>#}
-            <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
+            <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
                 <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" alt="">
             </a>
             <div class="pi-links">
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="pi-text">
-            <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
+            <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
                 <h6>{{ product.price }}</h6>
                 <p>{{ product.title }}</p>
             </a>
