--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -40,7 +40,7 @@
     <script src="/assets/js/public/libs/simpleCart.min.js"></script>
     <script src="/assets/js/public/script.js"></script>
 
-    {% include 'recaptcha.twig' %}
+    {% include 'mixin/recaptcha.twig' %}
 {% endblock %}
 
 {% block body %}
