--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -16,17 +16,16 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
+                        {% if category %}
+                            <a href="/cup/catalog/product/{{ category.parent }}" class="btn btn-white btn-icon mr-1">
+                                <i class="fas fa-arrow-left"></i>
+                            </a>
+                        {% endif %}
                         <h4 class="card-title">Список товаров {{ category ? 'в категории ' ~ category.title : '' }} ({{ products.count() }})</h4>
                         <a href="/cup/catalog/product/add{{ category ? '?category=' ~ category.uuid : '' }}" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
                             Добавить товар
                         </a>
-
-                        {% if category %}
-                            <a href="/cup/catalog/product/{{ category.parent }}" class="btn btn-secondary btn-round ml-1">
-                                <i class="fas fa-arrow-up"></i>
-                            </a>
-                        {% endif %}
                     </div>
                 </div>
                 <div class="card-body">
@@ -98,16 +97,23 @@
                         </table>
                     </div>
                 </div>
-                {% if category.uuid %}
-                    <div class="card-footer">
-                        <div class="d-flex align-items-center">
+
+                <div class="card-footer">
+                    <div class="d-flex align-items-center">
+                        {#<a href="#" class="btn btn-secondary btn-icon ml-auto" data-toggle="tooltip" data-placement="top" title="Импорт списка товаров">
+                            <i class="fas fa-file-import"></i>
+                        </a>
+                        <a href="#" class="btn btn-secondary btn-icon ml-1" data-toggle="tooltip" data-placement="top" title="Экспорт списка товаров">
+                            <i class="fas fa-file-export"></i>
+                        </a>#}
+                        {% if category.uuid %}
                             <a href="/cup/catalog/category/{{ category.uuid }}/edit" class="btn btn-info btn-round ml-auto">
                                 <i class="fa fa-edit"></i>
                                 Изменить категорию
                             </a>
-                        </div>
+                        {% endif %}
                     </div>
-                {% endif %}
+                </div>
             </div>
         </div>
     </div>
